# JSON-Immutable-XS

./: CMakeLists.txt  Changes  Makefile.PL  XS.xs
lib/JSON/Immutable/: XS.pm
src/: xs_helper.hpp
src/json_tree/: dict.cpp  dict.hpp
src/xs/: dict.h
t/: 01-use.t
